--- a/TwoMinuteWarning/View/Base.lproj/LaunchScreen.storyboard
+++ b/TwoMinuteWarning/View/Base.lproj/LaunchScreen.storyboard
@@ -1,27 +1,69 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fJC-QW-C2m">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
+        <scene sceneID="YRq-Rz-PTB">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OnBoardVC" id="fJC-QW-C2m" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
-                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
+                        <viewControllerLayoutGuide type="top" id="Ing-nA-WuO"/>
+                        <viewControllerLayoutGuide type="bottom" id="TO5-HJ-gep"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" userInteractionEnabled="NO" contentMode="scaleToFill" id="EDT-A6-Xmf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j7U-CS-CTf">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gij-Tu-a9a">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="F8v-Nc-9Ko">
+                                            <rect key="frame" x="67" y="284" width="280" height="128"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="128" id="bZe-sQ-Oh0"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In order to properly use this app, please allow notifications! (You can also turn on notifications in settings.)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DM7-Ue-az4">
+                                            <rect key="frame" x="20" y="553" width="374" height="70"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                            <color key="textColor" red="0.81826883549999996" green="0.76751321549999996" blue="0.5960489511" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.20006284120000001" green="0.31531301140000001" blue="0.2078266144" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <color key="tintColor" red="0.81826883549999996" green="0.76751321549999996" blue="0.5960489511" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <constraints>
+                                        <constraint firstItem="F8v-Nc-9Ko" firstAttribute="top" secondItem="gij-Tu-a9a" secondAttribute="top" constant="284" id="P0q-JU-09T"/>
+                                        <constraint firstItem="F8v-Nc-9Ko" firstAttribute="centerX" secondItem="gij-Tu-a9a" secondAttribute="centerX" id="RgU-cG-RKQ"/>
+                                        <constraint firstItem="F8v-Nc-9Ko" firstAttribute="leading" secondItem="gij-Tu-a9a" secondAttribute="leading" constant="67" id="bhf-Hb-8NJ"/>
+                                        <constraint firstAttribute="trailing" secondItem="DM7-Ue-az4" secondAttribute="trailing" constant="20" id="hVw-9u-uHt"/>
+                                        <constraint firstItem="DM7-Ue-az4" firstAttribute="leading" secondItem="gij-Tu-a9a" secondAttribute="leading" constant="20" id="kSr-A6-bOE"/>
+                                        <constraint firstItem="DM7-Ue-az4" firstAttribute="top" secondItem="gij-Tu-a9a" secondAttribute="top" constant="553" id="wOl-t8-dpM"/>
+                                    </constraints>
+                                </view>
+                                <color key="backgroundColor" red="0.20006284120000001" green="0.31531301140000001" blue="0.2078266144" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <blurEffect style="dark"/>
+                            </visualEffectView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.20006284120000001" green="0.31531301140000001" blue="0.2078266144" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0TY-LQ-rsd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="2628.985507246377" y="239.0625"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="198" height="300"/>
+    </resources>
 </document>
